--- a/client/src/index.css
+++ b/client/src/index.css
@@ -431,10 +431,11 @@ input, select, textarea{
     top:0;
     left:0;
     height:100vh;
-    width:100vh;
+    width:100%;
     display:grid;
     place-items:center;
     background:var(--color-bg);
+
 }
 .loader__image{
     width:4.5rem;
